# nmgui

./: .gitignore  LICENSE  README.md  TROUBLESHOOTING.md  install.sh  main.py  pyproject.toml
src/nmgui/: app.py  models.py  nmcli.py
