[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmgui"
version = "1.0.2"
description = "A graphical companion for nmcli - manage NetworkManager from a lightweight GUI"
readme = "README.md"
authors = [{name = "alphingj"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["qrcode[pil]>=7.4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

[project.scripts]
nmgui = "nmgui:main"

[project.urls]
Homepage = "https://github.com/alphingj/nmgui"

[tool.setuptools.packages.find]
where = ["src"]
